# cpp-conway

./: CMakeLists.txt  LICENSE  main.cpp
doc/: ideas.md  plan.md
lib/indices/: ij.cpp  ij.h  ij.hpp  index_model.cpp  index_model.h  index_model.hpp  neighborhood_model.h  neighborhood_model.hpp  node_container.cpp  node_container.h  property.h  property.hpp  taxicab_2d_index.cpp
lib/indices/2d_taxicab/: assets.h  index.h  index_ij.h  index_model.h  index_policies.h  padding_policies.h  selectors.h
lib/indices/2d_taxicab/index_models/: padding.h  padding_tests.h
lib/indices/2d_taxicab/tests/: index_policies__test.h
lib/indices/index_models/: taxicab_padding.h  taxicab_with_padding.cpp  taxicab_with_padding.h  taxicab_with_padding.hpp
lib/indices/neighborhood_models/: conway.h  conway_neighbors.hpp
lib/indices/network_builders/: conway.h  conway_netbuilder.hpp
lib/topology/: abstract_node.h  domain.cpp  domain.h  domain_tests.h  ideas.md  node.cpp  node.h  node.hpp  node__tests.hpp  node_tests.h  summation_node.cpp  summation_node.h  value_node.h
lib/topology/fabric/: make_value_nodes.h
lib/topology/tests/: summation_node__test.cpp  summation_node__test.h
